Widget logo removed

--- a/listing/templates/widget.html
+++ b/listing/templates/widget.html
@@ -8,9 +8,9 @@
           <div class="match">
             
           </div>
-          <div class="wid-logo">
-            <img src="{% static '/listing/images/wid-logo.png' %}">
-          </div>
+          <!--<div class="wid-logo">-->
+            <!--<img src="{% static '/listing/images/wid-logo.png' %}">-->
+          <!--</div>-->
         </div>
         <div class="wid-details">
       <h2  title="{{ i.company_description }}">{{ i.company_description }}</h2>
