--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -19,6 +19,7 @@
         <label>Email :</label> {{ form.username }}
         <label>{{ form.password.label }} :</label> {{ form.password }}
     <button type="submit" class="rf-btn select" style="float:right;font-size:15px; width:75px; margin-right:105px;">Login</button>
+        New user?<a href="{% url 'upload' %}">Create an account</a><br>
 	</form>
 
 </div>
