--- a/listing/templates/widget_detail.html
+++ b/listing/templates/widget_detail.html
@@ -43,9 +43,9 @@
 			  <label>Deadline for execution of legal docs:<b>{{ result.deadline_legal }}</b></label>
 			  <label>Proposed capital raise process:<b>{{ result.proposed_process }}</b></label>
 			  <label>Proposed exit options:<b>{{ result.proposed_exit }}</b></label>
-			  <label>Do you have 3 years audited financial statements available?:<b>{{ result.financial_statements.url }}</b></label>
-			  <label>Do you have a financial model?:<b>{{ result.financial_model.url }}</b></label>
-			  <label>Do you have an investor deck?:<b>{{ result.investor_deck.url }}</b></label>
+			  <label>Do you have 3 years audited financial statements available?:<b>{% if result.financial_statements %} {{ result.financial_statements.url }}{% endif %}</b></label>
+			  <label>Do you have a financial model?:<b>{% if result.financial_model %} {{ result.financial_model.url }} {% endif %} </b></label>
+			  <label>Do you have an investor deck?:<b>{% if result.investor_deck %} {{ result.investor_deck.url }} {% endif %} </b></label>
 			  <label>Company Bio:<b>{{ result.company_bio }}</b></label>
 			  <label>CEO Bio:<b>{{ result.ceo_bio }}</b></label>
 	      </div>
