--- a/listing/templates/opp_list.html
+++ b/listing/templates/opp_list.html
@@ -6,10 +6,9 @@
 		text-transform: capitalize;
 	}
 </style>
-<div class="container">
-	<br>
-	<h4 class="card-title mt-3 text-center">Listing Oppurtunities</h4>
-	<hr>
+
+<h4 class="heading-h1">Listing Oppurtunities</h4>
+
 	<!-- Alerts -->
 
 	<table id="example" class="table table-striped table-bordered" style="width:100%">
@@ -27,18 +26,17 @@
 
         	{% for opportunity in opportunities %}
 			<tr>
-                <td><a class="btn btn-warning" href="{% url 'opportunity-detail-view' pk=opportunity.id %}">{{ opportunity.company_description }}</a>
+                <td><a  href="{% url 'opportunity-detail-view' pk=opportunity.id %}">{{ opportunity.company_description }}</a>
 				</td>
 				<td> {% for m in opportunity.country.all %} {{ m }} {% if not forloop.last %}, {% endif %} {% endfor %}</td>
                 <td> {% for m in opportunity.class_select.all %} {{ m }} {% if not forloop.last %}, {% endif %} {% endfor %}</td>
                 <td>{% for m in opportunity.offer.all %} {{ m }} {% if not forloop.last %}, {% endif %} {% endfor %}</td>
 			    <td>{{ opportunity.financials}}</td>
             </tr>
-		</tbody>
-        {% endfor %}
 
+        {% endfor %}
+	</tbody>
 	</table>
-</div>
 
 {% endblock content %}
 {% block scripts %}
